[workspace]
members = [
    "bin/ream",
    "crates/common/consensus",
    "crates/common/execution_engine",
    "crates/common/executor", 
    "crates/common/network_spec",
    "crates/crypto/bls",
    "crates/networking/discv5",
    "crates/networking/p2p",
    "crates/rpc",
    "crates/runtime",
    "crates/storage",
    "testing/ef-tests",
]

default-members = ["bin/ream"]
resolver = "2"

[workspace.package]
authors = ["https://github.com/ReamLabs/ream/graphs/contributors"]
edition = "2021"
keywords = ["ethereum", "beam-chain", "blockchain", "consensus", "protocol", "ream"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReamLabs/ream"
rust-version = "1.81.0"
version = "0.1.0"

[workspace.dependencies]
alloy-consensus = { version = "0.11.1", default-features = false }
alloy-primitives = { version = "0.8", features = ['serde'] }
alloy-rlp = { version = "0.3.8", default-features = false, features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1.86"
kzg = { git = "https://github.com/grandinetech/rust-kzg" }
clap = "4"
discv5 = { version = "0.9.0", features = ["libp2p"] }
enr = "0.13.0"
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git" }
ethereum_serde_utils = "0.7"
ethereum_ssz = "0.8"
ethereum_ssz_derive = "0.8"
futures = "0.3"
hex = "0.4"
itertools = "0.14"
jsonwebtoken = "9.3.1"
libp2p-identity = "0.2"
libp2p-mplex = "0.42"
libp2p = { version = "0.54", default-features = false, features = ["identify", "yamux", "noise", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "metrics", "quic", "upnp", "gossipsub", "ping"] }
reqwest = { version = "0.12", features = ["json"] }
rstest = "0.23"
serde = { version = '1.0', features = ['derive', "rc"] }
serde_json = "1.0.139"
serde_yaml = "0.9"
snap = "1.1"
ssz_types = "0.10"
thiserror = "2.0.11"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "signal", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tree_hash = "0.9"
tree_hash_derive = "0.9"


# ream dependencies
ream-bls = { path = "crates/crypto/bls", features = ["zkcrypto"] } # Default feature is zkcrypto
ream-consensus = { path = "crates/common/consensus" }
ream-discv5 = { path = "crates/networking/discv5"}
ream-execution-engine = { path = "crates/common/execution_engine"}
ream-executor = { path = "crates/common/executor" }
ream-network-spec = { path = "crates/common/network_spec" }
ream-p2p = { path = "crates/networking/p2p" }

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing.git" }
