[package]
name = "ream-bls"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
bls12_381 = { git = "https://github.com/zkcrypto/bls12_381", rev = "9ea427c0eb1a7e2ac16902a322aea156c496ddb0", optional = true, features = ["experimental"] } # latest commit on 2024-06-22, which is the base commit of sp1-patches
blst = { version = "0.3", optional = true }
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
serde.workspace = true
sha2 = { version = "0.10.8", optional = true }
ssz_types.workspace = true
ssz_rs.workspace = true
ssz_rs_derive.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[features]
supranational = ["blst"]
zkcrypto = ["bls12_381", "sha2"]
