[package]
name = "ream-p2p"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# ream dependencies
ream-executor.workspace = true
ream-discv5.workspace = true

# misc
anyhow.workspace = true
enr.workspace = true
discv5.workspace = true
futures.workspace = true
hex.workspace = true
libp2p-identity.workspace = true
libp2p-mplex.workspace = true
libp2p.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
